...
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="Username"
...
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="Password"
...
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <Button
        android:id="@+id/Login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="44dp"
        android:background="@color/colorAccent"
...
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorAccent"
        android:text="SignUp"
        android:textSize="14sp"
...
