...
        android:id="@+id/lvPost"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginTop="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="87dp"
        android:layout_height="113dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_settings" />

...
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="21dp"
        android:background="@android:color/black"
        android:text="Post!!"
        android:textColor="@android:color/white"
...
