...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/otherProfileName"
        app:layout_constraintTop_toTopOf="@+id/otherProfileName" />

    <Button
        android:id="@+id/messageButton"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@android:color/darker_gray"
        android:text="Message"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/followButton"
        app:layout_constraintTop_toTopOf="@+id/followButton" />

    <Button
        android:id="@+id/home"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@android:color/darker_gray"
...
