<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.UserAccountActivity">

    <Button
        android:id="@+id/logout"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/button_border"
        android:text="Log Out"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateInfo" />

    <Button
        android:id="@+id/updateInfo"
        android:layout_width="129dp"
        android:layout_height="53dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="Update"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/updatePassword"
        app:layout_constraintTop_toBottomOf="@+id/updatePassword" />

    <EditText
        android:id="@+id/updatePassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_border"
        android:ems="5"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/updateUsername"
        app:layout_constraintTop_toBottomOf="@+id/updateUsername" />

    <EditText
        android:id="@+id/updateUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Username"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/passwordShow"
        android:layout_width="192dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="Show Password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/updatePassword"
        app:layout_constraintTop_toBottomOf="@+id/updatePassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:text="Username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateUsername" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="Password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/updatePassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
