...
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:drawableLeft="@drawable/ic_action_face"
        android:ems="10"
        android:background="@drawable/edit_text_border"
...
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:background="@drawable/edit_text_border"
        android:ems="10"
...
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/signUpName"
        app:layout_constraintStart_toStartOf="@+id/signUpName"
        app:layout_constraintTop_toBottomOf="@+id/signUpName" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="@+id/signUpUsername"
        app:layout_constraintStart_toStartOf="@+id/signUpUsername"
        app:layout_constraintTop_toBottomOf="@+id/signUpUsername" />


    <Button
        android:id="@+id/Register"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_border"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="@+id/signUpPassword"
...
